Fix for job nav wrapping

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -161,7 +161,7 @@ body {
     text-shadow: 0px 0px 0px rgba(1, 1, 1, .6);
 
     @media screen and (max-width: 1110px) {
-      padding: 10px 15px 10px 15px;
+      padding: 10px 12px 10px 12px;
     }
 
     &:active, &:link, &:visited {
